--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-Django~=5.1.4
-python-dotenv~=1.0.1
-requests~=2.32.3
-bs4~=0.0.2
-
+asgiref==3.8.1
+beautifulsoup4==4.12.3
+black==24.10.0
+bs4==0.0.2
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+Django==5.1.4
+gunicorn==23.0.0
+idna==3.10
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
+python-dotenv==1.0.1
+requests==2.32.3
+soupsieve==2.6
+sqlparse==0.5.3
+urllib3==2.3.0
