--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,22 @@ bs4==0.0.2
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+cloudscraper==1.2.71
+debugpy==1.8.11
 Django==5.1.4
+django-debug-toolbar==4.4.6
 gunicorn==23.0.0
 idna==3.10
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
+psycopg2-binary==2.9.10
+pydevd-pycharm==243.22562.220
+pyparsing==3.2.1
 python-dotenv==1.0.1
 requests==2.32.3
+requests-toolbelt==1.0.0
 soupsieve==2.6
 sqlparse==0.5.3
 urllib3==2.3.0
