--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   web:
     build:
@@ -19,3 +17,19 @@ services:
       DB_HOST: "db"
       DB_PORT: "5432"
     # No volume mount needed for code in production
+
+  db:
+    image: postgres:13
+    container_name: django_db
+    environment:
+      POSTGRES_DB: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+
+    volumes:
+      postgres_data:
+        driver: local
+        driver_opts:
+          type: none
+          o: bind
+          device: /Users/onur/Dev/serial_experiments/python/PharmacyOnDuty/postgres_data
