--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
-version: '3.8'
-
 services:
+
+  django:
+    build: .
+    ports:
+      - "8000:8000"
+      - "5678:5678"
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+    environment:
+      - DB_HOST=db
+      - REMOTE_DEBUGGING_PORT=5678
+
   db:
     build:
       context: .
