chore: update Docker configuration for production setup and add new Dockerfile

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,35 +1,36 @@
 services:
-  web:
+
+  django:
     build:
       context: .
-      dockerfile: Dockerfile.prod
-    container_name: django_prod
-    depends_on:
-      - db
+      dockerfile: dockerfile.prod
     ports:
       - "8000:8000"
+      - "5678:5678"
+    volumes:
+      - .:/app
+    depends_on:
+      - db
     environment:
-      DEBUG: "False"
-      ALLOWED_HOSTS: "render.com"
-      DB_NAME: "postgres"
-      DB_USER: "postgres"
-      DB_PASSWORD: "postgres"
-      DB_HOST: "db"
-      DB_PORT: "5432"
-    # No volume mount needed for code in production
+      - DB_HOST=db
+      - DJANGO_DEBUG=False
+    command: >
+      sh -c "mkdir -p /app/staticfiles &&
+             python manage.py collectstatic --noinput &&
+             gunicorn PharmacyOnDuty.wsgi:application --bind 0.0.0.0:8000"
 
   db:
-    image: postgres:13
-    container_name: django_db
+    build:
+      context: .
+      dockerfile: Dockerfile.postgis
     environment:
-      POSTGRES_DB: "postgres"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
-
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: gis
+    ports:
+      - "5432:5432"
     volumes:
-      postgres_data:
-        driver: local
-        driver_opts:
-          type: none
-          o: bind
-          device: /Users/onur/Dev/serial_experiments/python/PharmacyOnDuty/postgres_data
+      - postgis-data:/var/lib/postgresql/data
+
+volumes:
+  postgis-data:
