--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -20,4 +20,4 @@ RUN apt-get update && apt-get install -y \
 EXPOSE 8000
 
 # # Run the Django development server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
