--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,11 @@ repos:
   hooks:
     - id: tailwind-build
       name: Build Tailwind CSS
-      entry: .venv/bin/python manage.py tailwind build  # Full venv path
+      entry: |
+            bash -c '
+              .venv/bin/python manage.py tailwind build &&
+              git add theme/static/css/*
+            '
       language: system
       types_or: [html]  # Change to OR logic
       stages: [pre-commit]
