--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
             '
       language: system
       types_or: [html]  # Change to OR logic
-      stages: [pre-commit]
+      stages: [pre-push]
       pass_filenames: false
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
