--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,11 +1,11 @@
-services:
+version: '3.8'
 
+services:
   django:
     build:
       context: .
       dockerfile: dockerfile.prod
     ports:
-      - "8000:8000"
       - "5678:5678"
     volumes:
       - .:/app
@@ -31,6 +31,16 @@ services:
       - "5432:5432"
     volumes:
       - postgis-data:/var/lib/postgresql/data
+
+  nginx:
+    image: nginx:alpine
+    container_name: django_nginx
+    depends_on:
+      - django
+    ports:
+      - "80:80" # Only HTTP for now
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
 volumes:
   postgis-data:
