added certbot and succesful proxy to server from domain

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,40 @@
+# HTTP (port 80) block
 server {
-    listen 80 default_server;
-    server_name _;
+    listen 80;
+    server_name eczanerede.com www.eczanerede.com;
 
-    # We'll just pass everything to Django
+    # Still serve the ACME challenges for renewal
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # (Optional) Redirect all other HTTP traffic to HTTPS
     location / {
-        proxy_pass http://django:8000/;
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS (port 443) block
+server {
+    listen 443 ssl;
+    server_name eczanerede.com www.eczanerede.com;
+
+    # These paths match Certbot’s default storage
+    ssl_certificate /etc/letsencrypt/live/eczanerede.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/eczanerede.com/privkey.pem;
+
+    # Add any recommended SSL settings if you like
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers "HIGH:!aNULL:!MD5";
+
+    # Serve challenge path too (not strictly necessary in HTTPS block, but harmless)
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Proxy everything else to Django
+    location / {
+        proxy_pass http://django:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
