--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: dockerfile.prod
     ports:
-      - "5678:5678"
+      - "5678:5678" # optional
     volumes:
       - .:/app
     depends_on:
@@ -38,9 +38,20 @@ services:
     depends_on:
       - django
     ports:
-      - "80:80" # Only HTTP for now
+      - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certbot_webroot:/var/www/certbot
+      - ./certbot_letsencrypt:/etc/letsencrypt:ro
+
+  certbot:
+    image: certbot/certbot
+    # Temporarily remove the entrypoint so we can do the initial issuance
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    volumes:
+      - ./certbot_webroot:/var/www/certbot
+      - ./certbot_letsencrypt:/etc/letsencrypt
 
 volumes:
   postgis-data:
