improve securty on nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,9 +23,13 @@ server {
     ssl_certificate /etc/letsencrypt/live/eczanerede.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/eczanerede.com/privkey.pem;
 
-    # Add any recommended SSL settings if you like
+    # SSL Security
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers "HIGH:!aNULL:!MD5";
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
 
     # Serve challenge path too (not strictly necessary in HTTPS block, but harmless)
     location /.well-known/acme-challenge/ {
