--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,7 @@ sentry-sdk==2.20.0
 whitenoise==6.8.2
 django-tailwind==3.8.0
 django-browser-reload==1.17.0
+celery==5.4.0
+redis==5.2.1
+django-celery-beat==2.7.0
+django-redis==5.4.0
