feat: Update Dockerfile to install geospatial libraries and upgrade pip

--- a/Dockerfile.scraper
+++ b/Dockerfile.scraper
@@ -9,4 +9,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+# Install dependencies
+RUN pip install --upgrade pip && pip install -r requirements.txt
+
+# Install system dependencies for geospatial libraries
+RUN apt-get update && apt-get install -y \
+    binutils libproj-dev gdal-bin \
+    && apt-get clean
+
 CMD ["celery", "-A", "PharmacyOnDuty", "worker", "-l", "info"]
