Migrate from pip to uv for dependency management
- Update all Dockerfiles to use uv for package installation
- Replace requirements.txt with pyproject.toml and uv.lock
- Update docker-compose commands to use 'uv run' prefix
- Update justfile Django commands to use 'uv run'
- Update README.md with uv installation and usage instructions
- Add .venv to .dockerignore and .gitignore
- Streamline Dependabot configuration comments

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,7 @@
 version: 2
 updates:
-  # Monitor uv dependencies (pyproject.toml and uv.lock)
+  # Monitor Python dependencies managed by uv (pyproject.toml)
+  # Note: Dependabot uses pip ecosystem to read pyproject.toml until native uv support is added
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
@@ -11,8 +12,6 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    # Update both direct and indirect dependencies
     allow:
       - dependency-type: "all"
-    # Ensure uv.lock is updated when pyproject.toml changes
     versioning-strategy: "auto"
