--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.scraper
     restart: always
-    command: celery -A PharmacyOnDuty worker -l info --hostname=scraper@%%h
+    command: uv run celery -A PharmacyOnDuty worker -l info --hostname=scraper@%%h
     environment:
       - DJANGO_SETTINGS_MODULE=PharmacyOnDuty.settings
     volumes:
