--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,34 @@ warn_unused_ignores = true
 warn_redundant_casts = true
 warn_unused_configs = true
 disallow_untyped_decorators = false
+plugins = ["mypy_django_plugin.main"]
+
+[[tool.mypy.overrides]]
+module = "django_celery_beat.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "django_celery_results.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "django.contrib.gis.*"
+ignore_errors = false
+
+[[tool.mypy.overrides]]
+module = "django.contrib.postgres.*"
+ignore_errors = false
 
 [tool.django-stubs]
 django_settings_module = "PharmacyOnDuty.settings"
+
+[dependency-groups]
+dev = [
+    "mypy>=1.18.2",
+    "celery-types>=0.23.0",
+    "django-stubs>=5.2.7",
+    "django-stubs-ext>=5.2.7",
+    "types-redis>=4.6.0.20241004",
+    "types-requests>=2.32.4.20250913",
+]
 
