Add missing ports configuration for django service in docker-compose

--- a/docker-compose.prod.coolify.yml
+++ b/docker-compose.prod.coolify.yml
@@ -6,6 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     restart: always
+    ports:
+      - "8000:8000"
     volumes:
       - .:/app
     depends_on:
