--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -10,4 +10,5 @@ services:
       - DJANGO_SETTINGS_MODULE=PharmacyOnDuty.settings
     volumes:
       - .:/app
-    scale: 4
+    deploy:
+      replicas: 4
