Add migrate command to production Dockerfile and comment out worker CMD in scraper Dockerfile

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -25,5 +25,8 @@ COPY . /app
 # Expose the port Django will run on
 EXPOSE 8000
 
+# Run migrate
+RUN uv run python manage.py migrate
+
 # # Run the Django development server
 # CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
