🏷️ types: add comprehensive type annotations across pharmacy modules • Add generic type parameters to Django admin classes • Add return type annotations to model methods and utility functions • Import required typing modules (QuerySet, HttpRequest, Any, timedelta) • Add timeout parameter to requests.get() call • Add null check for BeautifulSoup element extraction • Fix timezone import to use timedelta directly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "packaging>=25.0",
     "pathspec>=0.12.1",
     "platformdirs>=4.4.0",
+    "pre-commit>=4.5.0",
     "psycopg2-binary>=2.9.10",
     "pyparsing>=3.2.5",
     "python-dotenv>=1.1.1",
