--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,39 @@ ignore_errors = false
 [tool.django-stubs]
 django_settings_module = "PharmacyOnDuty.settings"
 
+[tool.ruff]
+target-version = "py313"
+line-length = 88
+
+[tool.ruff.lint]
+select = ["E4", "E7", "F", "I", "UP"]
+ignore = ["E501", "F403"]
+exclude = [
+    "migrations/**",
+    "**/migrations/**",
+    ".git",
+    "**/__pycache__/**",
+    "*.egg-info/**",
+    ".ruff_cache/**",
+    "htmlcov/**",
+    "manage.py",
+]
+
+[tool.ruff.format]
+indent-style = "space"
+quote-style = "double"
+line-ending = "auto"
+exclude = [
+    "migrations/**",
+    "**/migrations/**",
+    ".git",
+    "**/__pycache__/**",
+    "*.egg-info/**",
+    ".ruff_cache/**",
+    "htmlcov/**",
+    "manage.py",
+]
+
 [dependency-groups]
 dev = [
     "mypy>=1.18.2",
@@ -72,5 +105,7 @@ dev = [
     "django-stubs-ext>=5.2.7",
     "types-redis>=4.6.0.20241004",
     "types-requests>=2.32.4.20250913",
+    "ruff>=0.14.9",
+    "pre-commit>=4.5.0",
 ]
 
