🏗️ refactor: implement proper Docker migration strategy
- Add shared entrypoint script to handle migrations automatically
- Update development Dockerfile to use entrypoint pattern
- Update production Dockerfile to run migrations at runtime instead of build time
- Remove incorrect build-time migration from production Dockerfile
- Ensure migrations run consistently across dev and production environments

--- a/docker/prod/workers/docker-compose.yml
+++ b/docker/prod/workers/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   worker:
     build:
       context: .
-      dockerfile: Dockerfile.scraper
+      dockerfile: Dockerfile
     restart: always
     command: uv run celery -A PharmacyOnDuty worker -l info --hostname=scraper@%%h
     environment:
