♻️ refactor: consolidate and optimize Docker configuration
- Create shared `docker/postgis/Dockerfile` and move `setup-postgis.sh` to `docker/scripts/`
- Consolidate `docker/prod/services/Dockerfile` and `docker/prod/workers/Dockerfile` into `docker/prod/Dockerfile`
- Update all compose files to use project root as build context
- Standardize `docker/dev/Dockerfile` to use multi-stage uv installation and apt cleanup
- Remove bind mounts from production compose files for immutable deployments

--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   django:
     build:
-      context: .
+      context: ..
       dockerfile: docker/dev/Dockerfile
     ports:
       - "8000:8000"
@@ -19,8 +19,8 @@ services:
 
   db:
     build:
-      context: .
-      dockerfile: docker/dev/Dockerfile.postgis
+      context: ..
+      dockerfile: docker/postgis/Dockerfile
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
@@ -40,7 +40,7 @@ services:
 
   worker:
     build:
-      context: .
+      context: ..
       dockerfile: docker/dev/Dockerfile
     command: uv run celery -A PharmacyOnDuty worker -l info --hostname=scraper@%%h
     environment:
@@ -55,7 +55,7 @@ services:
 
   beat:
     build:
-      context: .
+      context: ..
       dockerfile: docker/dev/Dockerfile
     command: uv run celery -A PharmacyOnDuty beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     environment:
