--- a/docker/prod/services/docker-compose.yml
+++ b/docker/prod/services/docker-compose.yml
@@ -3,13 +3,11 @@ version: "3.8"
 services:
   django:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ../../..
+      dockerfile: docker/prod/Dockerfile
     restart: always
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
     depends_on:
       - db
     environment:
@@ -17,14 +15,13 @@ services:
       - DJANGO_DEBUG=False
       - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
     command: >
-      sh -c "mkdir -p /app/staticfiles &&
-             uv run python manage.py collectstatic --noinput &&
+      sh -c "uv run python manage.py collectstatic --noinput &&
              uv run gunicorn PharmacyOnDuty.wsgi:application --bind 0.0.0.0:8000"
 
   db:
     build:
-      context: .
-      dockerfile: Dockerfile.postgis
+      context: ../../..
+      dockerfile: docker/postgis/Dockerfile
     restart: always
     environment:
       POSTGRES_USER: ${DB_USER}
@@ -45,16 +42,17 @@ services:
     command: redis-server --requirepass ${REDIS_PASSWORD}
 
   beat:
-    build: .
+    build:
+      context: ../../..
+      dockerfile: docker/prod/Dockerfile
     restart: always
     command: uv run celery -A PharmacyOnDuty beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     environment:
+      - DB_HOST=db
       - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
     depends_on:
       - redis
       - db
-    volumes:
-      - .:/app
 
 volumes:
   postgis-data:
