--- a/docker/prod/workers/docker-compose.yml
+++ b/docker/prod/workers/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   worker:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ../../..
+      dockerfile: docker/prod/Dockerfile
     restart: always
     command: uv run celery -A PharmacyOnDuty worker -l info --hostname=scraper@%%h
     environment:
+      - DB_HOST=db
+      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
       - DJANGO_SETTINGS_MODULE=PharmacyOnDuty.settings
-    volumes:
-      - .:/app
