--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
       - DB_HOST=db
       - DJANGO_SETTINGS_MODULE=PharmacyOnDuty.settings
+      - RUN_MIGRATIONS=true
 
   db:
     build:
