--- a/docker/prod/services/docker-compose.yml
+++ b/docker/prod/services/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - DB_HOST=db
       - DJANGO_DEBUG=False
       - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - RUN_MIGRATIONS=true
     command: >
       sh -c "uv run python manage.py collectstatic --noinput &&
              uv run gunicorn PharmacyOnDuty.wsgi:application --bind 0.0.0.0:8000"
