🔧 fix: correct Docker Compose build context paths
- Update build context from `../../..` to `.` in prod compose files
- Fix justfile paths to point to correct compose file locations
- Remove obsolete version attribute from services compose
- Align paths with Coolify's project-directory execution mode

--- a/docker/prod/services/docker-compose.yml
+++ b/docker/prod/services/docker-compose.yml
@@ -1,9 +1,9 @@
-version: "3.8"
+
 
 services:
   django:
     build:
-      context: ../../..
+      context: .
       dockerfile: docker/prod/Dockerfile
     restart: always
     ports:
@@ -21,7 +21,7 @@ services:
 
   db:
     build:
-      context: ../../..
+      context: .
       dockerfile: docker/postgis/Dockerfile
     restart: always
     environment:
@@ -44,7 +44,7 @@ services:
 
   beat:
     build:
-      context: ../../..
+      context: .
       dockerfile: docker/prod/Dockerfile
     restart: always
     command: uv run celery -A PharmacyOnDuty beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
