--- a/docker/prod/workers/docker-compose.yml
+++ b/docker/prod/workers/docker-compose.yml
@@ -4,6 +4,6 @@ services:
       context: .
       dockerfile: docker/prod/Dockerfile
     restart: always
-    command: uv run celery -A PharmacyOnDuty worker -l info --hostname=scraper@%%h
+    command: uv run --no-dev celery -A PharmacyOnDuty worker -l info --hostname=scraper@%%h
     environment:
       - DJANGO_SETTINGS_MODULE=PharmacyOnDuty.settings
