--- a/docker/prod/services/docker-compose.yml
+++ b/docker/prod/services/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
       - RUN_MIGRATIONS=true
     command: >
-      sh -c "uv run python manage.py collectstatic --noinput &&
-             uv run gunicorn PharmacyOnDuty.wsgi:application --bind 0.0.0.0:8000"
+      sh -c "uv run --no-dev python manage.py collectstatic --noinput &&
+             uv run --no-dev gunicorn PharmacyOnDuty.wsgi:application --bind 0.0.0.0:8000"
 
   db:
     build:
@@ -47,7 +47,7 @@ services:
       context: .
       dockerfile: docker/prod/Dockerfile
     restart: always
-    command: uv run celery -A PharmacyOnDuty beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    command: uv run --no-dev celery -A PharmacyOnDuty beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     environment:
       - DB_HOST=db
       - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
