--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -33,14 +33,14 @@ ENV PATH=/opt/venv/bin:$PATH
 WORKDIR /app
 
 # Copy entrypoint script before switching user
-COPY scripts/entrypoint.sh /app/entrypoint.sh
-RUN chmod +x /app/entrypoint.sh
+COPY scripts/entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
 
 # Switch to non-root user
 USER python
 
 # Set entrypoint
-ENTRYPOINT ["/app/entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 # Default dev server command (overridable)
 CMD ["uv", "run", "python", "manage.py", "runserver", "0.0.0.0:8000"]
