--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "django-celery-results>=2.6.0",
     "django-redis>=6.0.0",
     "django-tailwind>=4.2.0",
+    "flower>=2.0.1",
     "gunicorn>=23.0.0",
     "idna>=3.10",
     "packaging>=25.0",
