--- a/docker/prod/services/docker-compose.yml
+++ b/docker/prod/services/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   django:
     build:
@@ -7,7 +5,7 @@ services:
       dockerfile: docker/prod/Dockerfile
     restart: always
     ports:
-      - "8000:8000"
+      - "${DJANGO_HOST_PORT:-}:8000"
     depends_on:
       - db
     environment:
@@ -28,16 +26,16 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: gis
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - postgis-data:/var/lib/postgresql/data
 
   redis:
     image: redis:alpine
     restart: always
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
     volumes:
       - redis_data:/data
     command: redis-server --requirepass ${REDIS_PASSWORD}
@@ -62,7 +60,7 @@ services:
     restart: always
     command: uv run --no-dev celery -A PharmacyOnDuty flower --port=5555
     ports:
-      - "5555:5555"
+      - "${FLOWER_HOST_PORT:-}:5555"
     environment:
       - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
     depends_on:
