--- a/docker/prod/services/docker-compose.yml
+++ b/docker/prod/services/docker-compose.yml
@@ -26,16 +26,16 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: gis
-    expose:
-      - "5432"
+    ports:
+      - "${DB_HOST_PORT:-}:5432"
     volumes:
       - postgis-data:/var/lib/postgresql/data
 
   redis:
     image: redis:alpine
     restart: always
-    expose:
-      - "6379"
+    ports:
+      - "${REDIS_HOST_PORT:-}:6379"
     volumes:
       - redis_data:/data
     command: redis-server --requirepass ${REDIS_PASSWORD}
