--- a/docker/prod/services/docker-compose.yml
+++ b/docker/prod/services/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: docker/prod/Dockerfile
     restart: always
     ports:
-      - "${DJANGO_HOST_PORT:-}:8000"
+      - "${DJANGO_HOST_PORT:-0}:8000"
     depends_on:
       - db
     environment:
@@ -27,7 +27,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: gis
     ports:
-      - "${DB_HOST_PORT:-}:5432"
+      - "${DB_HOST_PORT:-0}:5432"
     volumes:
       - postgis-data:/var/lib/postgresql/data
 
@@ -35,7 +35,7 @@ services:
     image: redis:alpine
     restart: always
     ports:
-      - "${REDIS_HOST_PORT:-}:6379"
+      - "${REDIS_HOST_PORT:-0}:6379"
     volumes:
       - redis_data:/data
     command: redis-server --requirepass ${REDIS_PASSWORD}
@@ -60,7 +60,7 @@ services:
     restart: always
     command: uv run --no-dev celery -A PharmacyOnDuty flower --port=5555
     ports:
-      - "${FLOWER_HOST_PORT:-}:5555"
+      - "${FLOWER_HOST_PORT:-0}:5555"
     environment:
       - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
     depends_on:
