✅ test(coverage): Implement comprehensive tests and strict code quality
- Add pytest, pytest-django, and pytest-cov for testing
- Implement unit tests for City, Pharmacy, WorkingSchedule models
- Add mocked unit tests for Google Maps utilities in utils.py
- Fully type-annotate models.py, utils.py and all scrapers to satisfy strict mypy
- Configure pre-commit with ruff, mypy (strict), djlint, and safety hooks
- Standardize editor configs for VS Code and Zed
- Fix linting and formatting issues across the codebase, including templates

--- a/.gitignore
+++ b/.gitignore
@@ -21,15 +21,6 @@ staticfiles/
 # If you are using Docker:
 *.env
 
-# PyCharm specific files
-.idea/
-
-# VS Code specific files
-.vscode/
-
-# Zed specific files
-.zed/
-
 # Virtual environment
 venv/
 .venv/
@@ -49,3 +40,4 @@ osrm/
 certbot_letsencrypt/
 certbot_webroot/
 remotedev_nginx.conf
+.coverage
