🔧 chore(ci): improve Gemini Dispatch trigger reliability
- Add 'synchronize' to pull_request triggers to run on new pushes
- Add 'edited' to comment and review triggers
- Ensure dispatcher reacts to a wider range of development activities

--- a/.github/workflows/gemini-dispatch.yml
+++ b/.github/workflows/gemini-dispatch.yml
@@ -4,12 +4,14 @@ on:
   pull_request_review_comment:
     types:
       - 'created'
+      - 'edited'
   pull_request_review:
     types:
       - 'submitted'
   pull_request:
     types:
       - 'opened'
+      - 'synchronize'
   issues:
     types:
       - 'opened'
@@ -17,6 +19,7 @@ on:
   issue_comment:
     types:
       - 'created'
+      - 'edited'
 
 defaults:
   run:
